--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="widget-container">
 
 
-<div class="coinmarketcap-currency-widget" data-currency="bitcoin" data-base="INR" data-secondary="BTC" data-ticker="true" data-rank="true" data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
+<div class="coinmarketcap-currency-widget" data-currency="Bitcoin" data-base="INR" data-secondary="BTC" data-ticker="true" data-rank="true" data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
 
 <div class="coinmarketcap-currency-widget" data-currency="ethereum" data-base="INR" data-secondary="BTC" data-ticker="true" data-rank="true" data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
 
